<resources>
    <!--Main & universal -->
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="back">Назад</string>

    <!-- Settings -->
    <string name="settings_darkmode">Темная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_EULA">Пользовательское соглашение</string>

    <!-- Settings Placeholders-->
    <string name="share_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="email_recipient">"shoulddoisuppose@gmail.com"</string>
    <string name="email_subject">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="email_message">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="EULA_link">https://yandex.ru/legal/practicum_offer/</string>

    <!--Search -->
    <string name="no_results">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\n\n
    Загрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="search_refresh">Обновить</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="previously_searched">Вы искали</string>
    <string name="clear_recent">Очистить историю</string>

    <!--Player -->
    <string name="duration">Длительность</string>
    <string name="collection_title">Альбом</string>
    <string name="release_date">Год</string>
    <string name="primary_genre">Жанр</string>
    <string name="country">Страна</string>

    <!--Player -->
    <string name="tab_description">Избранные треки, плейлисты</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist_button">Новый плейлист</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>



    <!--Playlist -->
    <string name="new_playlist">Новый плейлист</string>
    <string name="new_playlist_name">Название*</string>
    <string name="new_playlist_description">Описание</string>
    <string name="create_button">Создать</string>
    <string name="exit_playlist_creation">Завершить создание плейлиста?</string>
    <string name="cancel_button">Отмена</string>
    <string name="exit_button">Завершить</string>
    <string name="playlist_toast_text">Плейлист [%1$s] создан</string>



    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="no_tracks_added">В этом плейлисте нет треков</string>
    <string name="share">Поделиться</string>
    <string name="edit">Редактировать информацию</string>
    <string name="delete">Удалить плейлист</string>
    <string name="confirm_track_deletion">Хотите удалить трек?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="confirm_playlist_deletion">Хотите удалить плейлист %1$s</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="make_edits">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="russian_track_conjugation_1">%1$s трек</string>
    <string name="russian_track_conjugation_2">%1$s трека</string>
    <string name="russian_track_conjugation_3">%1$s треков</string>
    <string name="russian_minute_conjugation_1">%1$s минута</string>
    <string name="russian_minute_conjugation_2">%1$s минуты</string>
    <string name="russian_minute_conjugation_3">%1$s минут</string>

</resources>